--- a/src/VVShare.css
+++ b/src/VVShare.css
@@ -12,19 +12,16 @@
   cursor: pointer;
   margin: 0 auto;
   position: relative;
-  overflow: hidden;
-  top: 0;
-  opacity: 1;
+  overflow: hidden; 
   text-align: center;
   -webkit-transition: all ease 0.3s;
   transition: all ease 0.3s;
   -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
+  backface-visibility: hidden; 
 }
 
-.vvshare-item:hover {
-  top: -5px;
-  opacity: 0.75;
+.vvshare-item:hover { 
+  transform: scale(1.2) translateY(-2px);
 }
 .vvshare-item i {
   display: block;
@@ -65,6 +62,7 @@
   top: 50%;
   transform: translateY(-50%);
   display: inline-block;
+  z-index: 1001;
 }
 .qrcode-win-content-m {
   min-width: 80%;
@@ -110,4 +108,6 @@
   padding: 0;
   margin: 10px auto;
   cursor: pointer;
+  position: relative;
+  z-index: 1002;
 }
