修复safari按钮默认样式问题

--- a/src/VVShare.css
+++ b/src/VVShare.css
@@ -21,7 +21,8 @@
 }
 
 .vvshare-item:hover { 
-  transform: scale(1.2) translateY(-2px);
+  -webkit-transform: scale(1.2) translateY(-2px); 
+          transform: scale(1.2) translateY(-2px);
 }
 .vvshare-item i {
   display: block;
@@ -60,7 +61,8 @@
   margin: 0 auto;
   position: relative;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   display: inline-block;
   z-index: 1001;
 }
@@ -110,4 +112,5 @@
   cursor: pointer;
   position: relative;
   z-index: 1002;
+  background-color: #fff;
 }
